@@ -5,6 +5,18 @@
         [Gtk] Split JSC and WebCore builds
         https://bugs.webkit.org/show_bug.cgi?id=19428
 
+        Add a pkg-config file for JavaScriptCoreGTK+.
+
+        * GNUmakefile.am: take care of the pkg-config file.
+        * javascriptcoregtk.pc.in: Added.
+
+2011-04-28  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Martin Robinson.
+
+        [Gtk] Split JSC and WebCore builds
+        https://bugs.webkit.org/show_bug.cgi?id=19428
+
         Build JavaScriptCore as a libtool shared library instead of a
         private convenience library.
 
